--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "momentjs": "^2.0.0",
     "mongoose": "^6.0.13"
   },
   "devDependencies": {
